fix contrast errors

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -338,7 +338,7 @@ main #search-results {
       }
 
       .date {
-        color: $grayLight;
+        color: $gray;
         padding-left: 0.25rem;
       }
 
